--- a/Emkt_InterCoop-8/index.html
+++ b/Emkt_InterCoop-8/index.html
@@ -156,10 +156,11 @@
                                     </tr>
                                 </table>
                                 <!-- Texto topo -->
-                                <table width="92%" border="0" cellspacing="0" cellpadding="0" align="center" class="to90">
+                                <table width="86%" border="0" cellspacing="0" cellpadding="0" align="center" class="to90">
                                     <tr>
                                         <td align="center" style="font-family: 'Lato', sans-serif; font-size:32px; line-height:40px; color:#000000;-ms-text-size-adjust:none;-webkit-text-size-adjust:none; text-align:left;mso-line-height-rule: exactly;font-weight: 700;">
-                                            Conheça mais sobre a InvestCoop <br class="hideThis">e como ela pode apoiar sua Unimed
+                                            <img src="text-1.png" width="510" height="74" alt="Conheça mais sobre a InvestCoop e como ela pode apoiar sua Unimed" style="width: 98%; max-width: 510px; height: auto; margin: 0 auto;" class="">
+                                            
                                         </td>
                                     </tr>
                                 </table>
@@ -169,7 +170,7 @@
                                         <td align="center" height="20" style="line-height:0px; font-size:0px; margin:0px;">&nbsp;</td>
                                     </tr>
                                 </table>
-                                <table width="92%" border="0" cellspacing="0" cellpadding="0" align="center" class="to90">
+                                <table width="86%" border="0" cellspacing="0" cellpadding="0" align="center" class="to90">
                                     <tr>
                                         <td align="center" style="font-family: 'Lato', sans-serif; font-size:32px; line-height:40px; color:#000000;-ms-text-size-adjust:none;-webkit-text-size-adjust:none; text-align:left;mso-line-height-rule: exactly;font-weight: 700;">
                                             <td align="left" style="line-height:0px; font-size:0px; margin:0px;"><img src="line.png" width="67" height="6" alt="" style="width: 67px; max-width: 67px; height: auto; margin: 0 auto;" class="imageMobile"></td>
@@ -184,20 +185,10 @@
                                     </tr>
                                 </table>
                                 <!-- Texto  -->
-                                <table width="92%" border="0" cellspacing="0" cellpadding="0" align="center" class="to90">
+                                <table width="86%" border="0" cellspacing="0" cellpadding="0" align="center" class="to90">
                                     <tr>
                                         <td align="center" style="font-family: 'Lato', sans-serif; font-size:18px; line-height:24px; color:#000000;-ms-text-size-adjust:none;-webkit-text-size-adjust:none; text-align:left;mso-line-height-rule: exactly;font-weight: normal;">
-                                            Você sabe como a <b>InvestCoop</b> pode fazer a gestão dos seus recursos?
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td align="center" style="font-family: 'Lato', sans-serif; font-size:18px; line-height:24px; color:#000000;-ms-text-size-adjust:none;-webkit-text-size-adjust:none; text-align:left;mso-line-height-rule: exactly;font-weight: normal;">
-                                            Como ela pode oferecer diversificadas opções de investimentos?
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td align="center" style="font-family: 'Lato', sans-serif; font-size:18px; line-height:24px; color:#000000;-ms-text-size-adjust:none;-webkit-text-size-adjust:none; text-align:left;mso-line-height-rule: exactly;font-weight: normal;">
-                                            A gente conta tudo para você em uma série de podcasts, com entrevistados do <b>Sistema Unimed.</b>
+                                            <img src="text-2.png" width="513" height="84" alt="Você sabe como a InvestCoop pode fazer a gestão dos seus recursos? Como ela pode oferecer diversificadas opções de investimentos? A gente conta tudo para você em uma série de podcasts, com entrevistados do Sistema Unimed." style="width: 98%; max-width: 513px; height: auto; margin: 0 auto;" class="">
                                         </td>
                                     </tr>
                                 </table>
@@ -209,10 +200,11 @@
                                     </tr>
                                 </table>
                                 <!-- Texto  -->
-                                <table width="92%" border="0" cellspacing="0" cellpadding="0" align="center" class="to90">
+                                <table width="86%" border="0" cellspacing="0" cellpadding="0" align="center" class="to90">
                                     <tr>
                                         <td align="center" style="font-family: 'Lato', sans-serif; font-size:18px; line-height:24px; color:#000000;-ms-text-size-adjust:none;-webkit-text-size-adjust:none; text-align:left;mso-line-height-rule: exactly;font-weight: normal;">
-                                            Neles, explicamos como funcionam os fundos, a asset <br class="hideThis">e a importância dela para fortalecer as Singulares.
+                                            <img src="text-3.png" width="396" height="40" alt="Neles, explicamos como funcionam os fundos, a asset e a importância dela para fortalecer as Singulares." style="width: 77%; max-width: 396px; height: auto; margin: 0 auto;" class="">
+                                            
                                         </td>
                                     </tr>
                                 </table>
